--- a/k8s/web-serving/step1-db.yaml
+++ b/k8s/web-serving/step1-db.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: db
-  namespace: web
+  namespace: web-serving
 spec:
   replicas: 1
   selector:
@@ -20,8 +20,21 @@ spec:
           image: cloudsuite/web-serving:db_server
           securityContext:
             privileged: true
+          command: ["/bin/sh", "-lc"]
+          args:
+            - |
+              /etc/entrypoint.sh || true
+              trap 'service mariadb stop || service mysql stop || true; exit 0' TERM INT
+              sleep infinity
           ports:
             - containerPort: 3306
+          readinessProbe:
+            tcpSocket:
+              port: 3306
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 2
+            failureThreshold: 12
           volumeMounts:
             - name: db-data
               mountPath: /var/lib/mysql
@@ -33,10 +46,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db
-  namespace: web
+  namespace: web-serving
 spec:
   selector:
     app: db
   ports:
-    - port: 3306
+    - name: mysql
+      port: 3306
       targetPort: 3306
